--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,8 +3,7 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -12,105 +11,72 @@
   align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+  font-size: 1.8rem;
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.main_content {
   display: flex;
+  flex-direction: column;
+}
+
+.prefectures_list {
+  width: 100%;
+  padding: 0.5rem 0.5rem;
+}
+
+.prefectures_itemlist {
+  display: grid;
+  row-gap: 8px;
+  column-gap: 8px;
+  margin-top: 20px;
+  width: 100%;
+  grid-template-columns: repeat(6,1fr);
+  padding-inline-start: 0px;
+}
+
+.prefectures_item {
+  font-size: 1rem;
+}
+
+.prefectures_checkbox {
+  display: none;
+}
+
+.prefectures_label {  
+  border: 1px solid #aaa;
+  border-radius: 5px;
   align-items: center;
+  display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  padding: 10px 5px;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.prefectures_checkbox:checked + .prefectures_label {
+  background-color: #2547c0;
+  border-color: #2547c0;
+  color: #fff;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.guidetext_display {
+  display: block;
+  font-size: 1rem;
+  text-align: center;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.guidetext_hidden {
+  display: none;
 }
 
 @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+  .prefectures_itemlist {
+    grid-template-columns: repeat(3,1fr);
+  }
+  .prefectures_label {  
+    font-size: 0.9rem;
+    padding: 5px 5px;
   }
 }
