--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 游ゴシック Medium,YuGothic,YuGothicM,Hiragino Kaku Gothic ProN,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,sans-serif;
 }
 
 a {
@@ -13,4 +12,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+li, ol, ul {
+  list-style-type: none;
 }
