グラフ表示総人口推移グラフ

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,6 +71,10 @@
   display: none;
 }
 
+.population_graph {
+  width: 100%;
+}
+
 @media (max-width: 600px) {
   .prefectures_itemlist {
     grid-template-columns: repeat(3,1fr);
